Write and read error log into xml file done for test purpose in super admin area

--- a/NBL/Areas/SuperAdmin/Views/Shared/_MenuPartialPage.cshtml
+++ b/NBL/Areas/SuperAdmin/Views/Shared/_MenuPartialPage.cshtml
@@ -171,19 +171,7 @@
             <li>@Html.ActionLink(" Product Wish Vat", "ProductWishVat", "Home", new { area = "SuperAdmin" }, new { @class = "fa fa-list", style = "font-weight: bolder" })</li>
         </ul>
     </li>
-    <li class="treeview">
-        <a href="#">
-            <i class="fa fa-eye"></i>
-            <span>Vouchers</span>
-            <span class="pull-right-container">
-                <i class="fa fa-angle-left pull-right"></i>
-            </span>
-        </a>
-        <ul class="treeview-menu">
-            <li>@Html.ActionLink(" Journal", "ViewJournal", "Voucher", new { area = "SuperAdmin" }, new { @class = "fa fa-list", style = "font-weight: bolder" })</li>
-            <li>@Html.ActionLink(" Vouchers", "Vouchers", "Home", new { area = "SuperAdmin" }, new { @class = "fa fa-list", style = "font-weight: bolder" })</li>
-        </ul>
-    </li>
+    
   
     <li class="treeview">
         <a href="#">
@@ -199,5 +187,19 @@
            
         </ul>
     </li>
+    
+<li class="treeview">
+    <a href="#">
+        <i class="fa fa-warning"></i>
+        <span>Error Logs</span>
+        <span class="pull-right-container">
+            <i class="fa fa-angle-left pull-right"></i>
+        </span>
+    </a>
+    <ul class="treeview-menu">
+        <li>@Html.ActionLink(" Error List", "ErrorList", "ErrorLog", new { area = "SuperAdmin" }, new { @class = "fa fa-list", style = "font-weight: bolder" })</li>
+        <li>@Html.ActionLink(" Generate Error", "GenerateError", "ErrorLog", new { area = "SuperAdmin" }, new { @class = "fa fa-list", style = "font-weight: bolder" })</li>
+    </ul>
+</li>
 
 </ul>
