Add error log to SCM, Service, QC,RND and production area

--- a/NBL/Areas/SuperAdmin/Views/ErrorLog/ErrorList.cshtml
+++ b/NBL/Areas/SuperAdmin/Views/ErrorLog/ErrorList.cshtml
@@ -39,7 +39,7 @@
         function RemoveErrorById(btnClicked) {
 
             //alert(btnClicked.id);
-            if (confirm("Are you sure to remove this product ??")) {
+            if (confirm("Are you sure to remove this exception ??")) {
                 var id = btnClicked.id;
                 var json = { id: id };
                 $.ajax({
