Client,EMployee view move to Common area

--- a/NBL/Areas/AccountsAndFinance/Views/Shared/_MenuAccountManagerPartialPage.cshtml
+++ b/NBL/Areas/AccountsAndFinance/Views/Shared/_MenuAccountManagerPartialPage.cshtml
@@ -82,10 +82,10 @@
             </span>
         </a>
         <ul class="treeview-menu">
-            <li>@Html.ActionLink("  Employees", "ViewEmployee", "Home", new { area = "AccountsAndFinance" }, new { @class = "fa fa-list", style = "font-weight: bolder;" })</li>
-            <li>@Html.ActionLink(" Clients", "ViewClient", "Home", new { area = "AccountsAndFinance" }, new { @class = "fa fa-list", style = "font-weight: bolder;" })</li>
-            <li>@Html.ActionLink(" Products", "ViewProduct", "Home", new { area = "AccountsAndFinance" }, new { @class = "fa fa-list", style = "font-weight: bolder;" })</li>
-            <li>@Html.ActionLink(" Branch List", "ViewBranch", "Home", new { area = "AccountsAndFinance" }, new { @class = "fa fa-list", style = "font-weight: bolder;" })</li>
+            <li>@Html.ActionLink("  Employees", "ViewEmployee", "ShowInfo", new { area = "CommonArea" }, new { @class = "fa fa-list", style = "font-weight: bolder;" })</li>
+            <li>@Html.ActionLink(" Clients", "ViewClient", "ShowInfo", new { area = "CommonArea" }, new { @class = "fa fa-list", style = "font-weight: bolder;" })</li>
+            <li>@Html.ActionLink(" Products", "ViewProduct", "ShowInfo", new { area = "CommonArea" }, new { @class = "fa fa-list", style = "font-weight: bolder;" })</li>
+            <li>@Html.ActionLink(" Branch List", "ViewBranch", "ShowInfo", new { area = "CommonArea" }, new { @class = "fa fa-list", style = "font-weight: bolder;" })</li>
         </ul>
     </li>
 </ul>
