--- a/NBL/Areas/AccountsAndFinance/Views/Shared/_MenuPartialPage.cshtml
+++ b/NBL/Areas/AccountsAndFinance/Views/Shared/_MenuPartialPage.cshtml
@@ -126,10 +126,10 @@
             </span>
         </a>
         <ul class="treeview-menu">
-            <li>@Html.ActionLink("  Employees", "ViewEmployee", "Home", new { area = "AccountsAndFinance" }, new { @class = "fa fa-list", style = "font-weight: bolder;" })</li>
-            <li>@Html.ActionLink(" Clients", "ViewClient", "Home", new { area = "AccountsAndFinance" }, new { @class = "fa fa-list", style = "font-weight: bolder;" })</li>
-            <li>@Html.ActionLink(" Branch List", "ViewBranch", "Home", new { area = "AccountsAndFinance" }, new { @class = "fa fa-list", style = "font-weight: bolder;" })</li>
-            <li>@Html.ActionLink(" Product List", "ViewProduct", "Home", new { area = "AccountsAndFinance" }, new { @class = "fa fa-list", style = "font-weight: bolder;" })</li>
+            <li>@Html.ActionLink("  Employees", "ViewEmployee", "ShowInfo", new { area = "CommonArea" }, new { @class = "fa fa-list", style = "font-weight: bolder;" })</li>
+            <li>@Html.ActionLink(" Clients", "ViewClient", "ShowInfo", new { area = "CommonArea" }, new { @class = "fa fa-list", style = "font-weight: bolder;" })</li>
+            <li>@Html.ActionLink(" Branch List", "ViewBranch", "ShowInfo", new { area = "CommonArea" }, new { @class = "fa fa-list", style = "font-weight: bolder;" })</li>
+            <li>@Html.ActionLink(" Product List", "ViewProduct", "ShowInfo", new { area = "CommonArea" }, new { @class = "fa fa-list", style = "font-weight: bolder;" })</li>
             <li>@Html.ActionLink(" Journals", "ViewJournal", "Voucher", new { area = "AccountsAndFinance" }, new { @class = "fa fa-list", style = "font-weight: bolder;" })</li>
             <li>@Html.ActionLink(" All Vouchers", "Vouchers", "Voucher", new { area = "AccountsAndFinance" }, new { @class = "fa fa-list", style = "font-weight: bolder;" })</li>
             <li>@Html.ActionLink(" Pending Vouchers", "PendingVouchers", "Voucher", new { area = "AccountsAndFinance" }, new { @class = "fa fa-list", style = "font-weight: bolder;" })</li>
