--- a/NBL/Areas/Corporate/Views/Shared/_MenuPartialPage.cshtml
+++ b/NBL/Areas/Corporate/Views/Shared/_MenuPartialPage.cshtml
@@ -48,14 +48,14 @@
                 <li>@Html.ActionLink(" Test", "Test", "Home", new { area = "Corporate" }, new { @class = "fa fa-list", style = "font-weight: bolder" })</li>
             </ul>
         </li>
-        <li>@Html.ActionLink(" Employee List", "ViewEmployee", "Home", new { area = "Corporate" }, new { @class = "fa fa-list", style = "font-weight: bolder" })</li>
-        <li>@Html.ActionLink(" Client List", "ViewClient", "Home", new { area = "Corporate" }, new { @class = "fa fa-list", style = "font-weight: bolder" })</li>
-        @*<li>@Html.ActionLink(" Product List", "ProductInStock", "Home", new { area = "Corporate" }, new { @class = "fa fa-list" })</li>*@
-        <li>@Html.ActionLink(" Branch List", "ViewBranch", "Home", new { area = "Corporate" }, new { @class = "fa fa-list", style = "font-weight: bolder" })</li>
+        <li>@Html.ActionLink(" Employee List", "ViewEmployee", "ShowInfo", new { area = "CommonArea" }, new { @class = "fa fa-list", style = "font-weight: bolder" })</li>
+        <li>@Html.ActionLink(" Client List", "ViewClient", "ShowInfo", new { area = "CommonArea" }, new { @class = "fa fa-list", style = "font-weight: bolder" })</li>
+     
+        <li>@Html.ActionLink(" Branch List", "ViewBranch", "ShowInfo", new { area = "CommonArea" }, new { @class = "fa fa-list", style = "font-weight: bolder" })</li>
         <li>@Html.ActionLink(" Division List", "ViewDivision", "Home", new { area = "Corporate" }, new { @class = "fa fa-list", style = "font-weight: bolder" })</li>
         <li>@Html.ActionLink(" Region List", "ViewRegion", "Home", new { area = "Corporate" }, new { @class = "fa fa-list", style = "font-weight: bolder" })</li>
         <li>@Html.ActionLink(" Territory List", "ViewTerritory", "Home", new { area = "Corporate" }, new { @class = "fa fa-list", style = "font-weight: bolder" })</li>
-        <li>@Html.ActionLink(" Supplier List", "Supplier", "Home", new { area = "Corporate" }, new { @class = "fa fa-list", style = "font-weight: bolder" })</li>
+        <li>@Html.ActionLink(" Supplier List", "Supplier", "ShowInfo", new { area = "CommonArea" }, new { @class = "fa fa-list", style = "font-weight: bolder" })</li>
         <li>@Html.ActionLink(" Departments", "ViewDepartment", "Home", new { area = "Corporate" }, new { @class = "fa fa-list", style = "font-weight: bolder" })</li>
         <li>@Html.ActionLink(" Product Wish Vat", "ProductWishVat", "Home", new { area = "Corporate" }, new { @class = "fa fa-list", style = "font-weight: bolder" })</li>
         <li>@Html.ActionLink(" Discounts", "ViewDiscount", "Home", new { area = "Corporate" }, new { @class = "fa fa-list", style = "font-weight: bolder" })</li>
