--- a/NBL/Areas/Sales/Views/Shared/_MenuPartialPage.cshtml
+++ b/NBL/Areas/Sales/Views/Shared/_MenuPartialPage.cshtml
@@ -29,6 +29,6 @@
     <ul class="treeview-menu">
             
         <li>@Html.ActionLink(" Clients", "ViewClient", "Home", new {area = "Sales"}, new {@class = "fa fa-list", style = "font-weight: bolder"})</li>     
-        <li>@Html.ActionLink(" Branch List", "ViewBranch", "Home", new {area = "Sales"}, new {@class = "fa fa-list", style = "font-weight: bolder"})</li>
+        <li>@Html.ActionLink(" Branch List", "ViewBranch", "ShowInfo", new {area = "CommonArea"}, new {@class = "fa fa-list", style = "font-weight: bolder"})</li>
     </ul>
 </li>
