--- a/NBL/Areas/Sales/Views/Order/RetailSale.cshtml
+++ b/NBL/Areas/Sales/Views/Order/RetailSale.cshtml
@@ -1,80 +1,161 @@
-﻿@model NBL.Models.ViewModels.Orders.ViewCreateRetailSaleModel
+﻿@using NBL.Models.ViewModels
+@model NBL.Models.ViewModels.Orders.ViewCreateRetailSaleModel
 @{
-    ViewBag.Title = "Retail Sale Barcode Entry";
+    ViewBag.Title = "Sold Barcode Entry";
     Layout = "~/Views/Shared/_UserLayoutPage.cshtml";
+    var user = (ViewUser) Session["user"];
+    var date = DateTime.Now.Date.ToString("dd-MMMM-yyyy");
 }
 
 <section class="content">
     
     <div class="row">
-        <div class="col-md-6 col-md-offset-3">
-            <h3 class="text-center text-green">Barcode Entry</h3>
-            
-            @using (Ajax.BeginForm("RetailSale", "Order",
-                new AjaxOptions
-                {
-                    HttpMethod = "POST",
-                    OnSuccess = "OnSuccess",
-                    OnFailure = "OnFailure"
-                }))
-            {
-                <div class="form-horizontal">
-                    <div class="form-group">
-                        @Html.LabelFor(m => m.BarCode, new {@class = "control-label col-md-3"})
-                        <div class="col-md-9">
-                            @Html.TextBoxFor(m => m.BarCode, new {@class = "form-control", placeholder = "Enter barcode",autofocus="autofocus"})
-                            @Html.ValidationMessageFor(m => m.BarCode, "", new {@class = "text-danger"})
-                        </div>
+        <div class="col-md-4 col-md-offset-4" style="border: 1px solid;">
+            <div class="form-horizontal">
+                <h3 class="text-center">Scan Product</h3>
+                <div id="message" style="display:none;font-weight:bold;font-size:20px" class="text-center">
+                </div>
+                <div class="form-group">
+                    <label for="ProductCode" class="control-label col-md-3">Product Code</label>
+                    <input type="hidden" id="UserId" name="UserId" value="@user.UserId" />
+                    <div class="col-md-9">
+                                
+                        <input type="text" name="ProductCode" id="ProductCode" class="form-control" placeholder="Type or Scan barcode.." autofocus/>
                     </div>
 
-                    <div class="form-group">
+                </div>
+           <div class="form-group">
+                    <label for="SaleDate" class="control-label col-md-3">Sale Date</label>
+                    <div class="col-md-9">
 
-                        <div class="col-md-10 col-md-offset-3">
-                            <div class="btn-toolbar">
-                                
-                             
-                                <a href="~/sales" class="btn btn-danger">Cancel</a>
-                                <input type="submit" value="Save Barcode" class="btn btn-info" />
+                        <input type="text" id="SaleDate" name="SaleDate" value="@date" class="form-control"/>
+                    </div>
+                </div>
+                <div class="form-group">
+                    <div class="row">
+                        <div class="col-md-3"></div>
+                        <div class="col-md-9">
+                            <div class="btn toolbar">
+                               
+                                @Html.ActionLink("Back","Home","Home", null,new { @class="btn btn-danger"})
+                                <button type="button" value="@user.UserId" class="btn btn-success" onclick="SaveScannedBarcodeToTextFile(this)"> Add</button>
                             </div>
                         </div>
                     </div>
                 </div>
-            }
+            </div>
         </div>
-        
+
     </div>
-  
+    <hr/>
+    <div class="row">
+        <div class="col-md-12">
+            <div id="divScannedProducts"></div>
+        </div>
+    </div>
+    
 </section>
 
 @section Scripts
 {
-    <script type="text/javascript">
+    <script>
+        $(document).ready(function () {
+            $("#SaleDate").datepicker(
+                {
+                    dateFormat: 'dd-MM-yy',
+                    minDate: '-40D',
+                    maxDate: '+0D'
+                });
 
-        function OnSuccess(data) {
-           
-            alert(data.Message);
-        }  
-        function OnFailure(data) {  
-            alert(data.Error);
-        }
+            loadAllScannedBarCodeList();
+        });
+       
 
     </script> 
-    
+    <script>
+        function SaveScannedBarcodeToTextFile(btnClicked) {
+            //var $form = $(btnClicked).parents('form');
+            var code = $("#ProductCode").val();
+            var userId = $("#UserId").val();
+            var saleDate = $("#SaleDate").val();
+            if (code === "") {
+                alert("Please Enter barcode..");
+            } else {
+                $.ajax({
+                    type: "POST",
+                    url: RootUrl + 'sales/order/SaveScannedBarcodeToXmlFile',
+                    data: { barcode: code, userId: userId, saleDate:saleDate},
+                    error: function (xhr, status, error) {
+                        alert(error);
+                    },
+                    success: function (response) {
+                        var result = response.Message;
+                        //alert("Saved Successfully");
+                        $('#message').html(response).fadeIn('slow');
+                        $('#message').html(result).fadeIn('slow'); //also show a success message
+                        $('#message').delay(700).fadeOut('slow');
+                        loadAllScannedBarCodeList();
+                        $('#ProductCode').val("");
+                    }
+                });
+            }
+            
+        }
+    </script>
 <script>
 
-    function ViewBarCodeList() {
-        $("#BarCodeList").html("");
-        //alert("Hi");
+   
+
+    function loadAllScannedBarCodeList() {
+        var invoiceId = $("#InvoiceId").val();
+        var json = { invoiceId: invoiceId };
         $.ajax({
-            type: "GET",
-            url: RootUrl + 'Sales/Order/GetTempSoldBarCodes',
-            contentType: "application/json; charset=utf-8",
+            type: 'Post',
+            url: RootUrl + "sales/order/GetTempSoldProducts",
+            contentType: 'application/json; charset=utf-8',
+            data: JSON.stringify(json),
             success: function (data) {
-                var row = $("<tr><td style='border: 1px solid black; padding: 5px 10px;'>" + data + "</td></tr>");
-                $("#BarCodeList").append(row);
-                   
+                $("#divScannedProducts").html(data);
             }
         });
     }
+
+    function RemoveProductByBarcode(btnClicked) {
+
+        //alert(btnClicked.id);
+        if (confirm("Are you sure to remove this product ??")) {
+            var id = btnClicked.id;
+            var json = { id: id };
+            $.ajax({
+                type: "POST",
+                url: '@Url.Action("RemoveProductByBarcode", "Order",new {area="Sales"})',
+                contentType: "application/json; charset=utf-8",
+                data: JSON.stringify(json),
+                success: function (data) {
+                    loadAllScannedBarCodeList();
+                }
+            });
+        }
+
+
+    }
+
+    function ConfirmToSave(id) {
+
+        if (confirm("Are you sure to Save?")) {
+
+            $("#saveSoldBarcodesForm").submit();
+            loadAllScannedBarCodeList();
+            alert("Saved Successfully!!");
+
+        } else {
+            return false;// if it's a link to prevent post
+        }
+
+        return false;// if it's a link to prevent post
+
+
+    }
+
 </script>
 }
