--- a/NBL/Areas/Corporate/Views/Home/Home.cshtml
+++ b/NBL/Areas/Corporate/Views/Home/Home.cshtml
@@ -3,15 +3,123 @@
 @{
     ViewBag.Title = "Home";
     Layout = "~/Views/Shared/_UserLayoutPage.cshtml";
+    var production = Model.Production;
+    var dispatch = Model.Dispatch;
+    var branches = Model.Branches;
+    var dhaka = branches.ToList().Find(n => n.BranchId == 9).Orders.Count;
+    var ctg = branches.ToList().Find(n => n.BranchId == 12).Orders.Count;
+    var bogura = branches.ToList().Find(n => n.BranchId == 10).Orders.Count;
+    var barisal = branches.ToList().Find(n => n.BranchId == 8).Orders.Count;
+    var jessore = branches.ToList().Find(n => n.BranchId == 4).Orders.Count;
+    var totalOrder=Model.TotalOrder;
+    var accountSummary = Model.AccountSummary;
 }
 
 <section class="content">
-    @Html.Partial("_RptOrderStockSummaryPartialPage",Model)
+    <div class="row">
+        <div class="col-md-6">
+            <!-- BAR CHART -->
+            <div class="box box-success">
+                <div class="box-header with-border">
+                    <h3 class="box-title">Production VS Dispatch (@DateTime.Now.Year)</h3>
+                    <div class="box-tools pull-right">
+                        <button type="button" class="btn btn-box-tool" data-widget="collapse">
+                            <i class="fa fa-minus"></i>
+                        </button>
+                        <button type="button" class="btn btn-box-tool" data-widget="remove"><i class="fa fa-times"></i></button>
+                    </div>
+                </div>
+                <div class="box-body chart-responsive">
+                    <div class="chart" id="bar-chart" style="height: 300px;"></div>
+                </div>
+                <!-- /.box-body -->
+            </div>
+            <!-- /.box -->
+           
+        </div>
+        <!-- /.col (LEFT) -->
+        <div class="col-md-6">
+            <!-- AREA CHART -->
+            <div class="box box-primary">
+                <div class="box-header with-border">
+                    <h3 class="box-title">Area Chart (@DateTime.Now.Year)</h3>
+                    <div class="box-tools pull-right">
+                        <button type="button" class="btn btn-box-tool" data-widget="collapse">
+                            <i class="fa fa-minus"></i>
+                        </button>
+                        <button type="button" class="btn btn-box-tool" data-widget="remove"><i class="fa fa-times"></i></button>
+                    </div>
+                </div>
+                <div class="box-body chart-responsive">
+                    <div class="chart" id="revenue-chart" style="height: 300px;"></div>
+                </div>
+                <!-- /.box-body -->
+            </div>
+            <!-- /.box -->
+            
+            
+        </div>
+        <!-- /.col (RIGHT) -->
+    </div>
  
+    <div class="row">
+        <div class="col-md-6">
+            <!-- /.box -->
+            <!-- LINE CHART -->
+            <div class="box box-info">
+                <div class="box-header with-border">
+                    <h3 class="box-title">Sale (@DateTime.Now.Year)</h3>
+                    <div class="box-tools pull-right">
+                        <button type="button" class="btn btn-box-tool" data-widget="collapse">
+                            <i class="fa fa-minus"></i>
+                        </button>
+                        <button type="button" class="btn btn-box-tool" data-widget="remove"><i class="fa fa-times"></i></button>
+                    </div>
+                </div>
+                <div class="box-body chart-responsive">
+                    <div class="chart" id="line-chart" style="height: 300px;"></div>
+                </div>
+                <!-- /.box-body -->
+            </div>
+            <!-- /.box -->
+           
+        </div>
+        <!-- /.col (LEFT) -->
+        <div class="col-md-6">
+            <!-- DONUT CHART -->
+            <div class="box box-danger">
+                <div class="box-header with-border">
+                    <h3 class="box-title">Branch Wise Sale (@DateTime.Now.Year)</h3>
+                    <div class="box-tools pull-right">
+                        <button type="button" class="btn btn-box-tool" data-widget="collapse">
+                            <i class="fa fa-minus"></i>
+                        </button>
+                        <button type="button" class="btn btn-box-tool" data-widget="remove"><i class="fa fa-times"></i></button>
+                    </div>
+                </div>
+                <div class="box-body chart-responsive">
+                    <div class="chart" id="sales-chart" style="height: 300px; position: relative;"></div>
+                </div>
+                <!-- /.box-body -->
+            </div>
+            <!-- /.box -->
+            
+           
+        </div>
+        <!-- /.col (RIGHT) -->
+    </div>
 </section>
 
 @section Scripts
 {
+    <script>
+        $(document).ready(function() {
+            var ctx1 = document.getElementById("barchart").getContext("2d");
+            window.myBar = new Chart(ctx1).Bar(barChartData, {
+                responsive: true
+            });
+        });
+    </script>
     <script>
         $("#tbl_Sales_summary").DataTable();
         $("#tbl_Stock_summary").DataTable();
@@ -23,4 +131,99 @@
             timeout = setTimeout("location.reload(true);", 60000);
         }
     </script>
+    
+<script>
+    $(function () {
+        "use strict";
+
+        // AREA CHART
+        var area = new Morris.Area({
+            element: 'revenue-chart',
+            resize: true,
+            data: [
+                {y: '2011 Q1', item1: 2666},
+                {y: '2011 Q2', item1: 2778},
+                {y: '2011 Q3', item1: 4912},
+                {y: '2011 Q4', item1: 3767},
+                {y: '2012 Q1', item1: 6810},
+                {y: '2012 Q2', item1: 5670},
+                {y: '2012 Q3', item1: 4820},
+                {y: '2012 Q4', item1: 15073},
+                {y: '2013 Q1', item1: 10687},
+                {y: '2013 Q2', item1: 8432}
+            ],
+            xkey: 'y',
+            ykeys: ['item1'],
+            labels: ['Item 1'],
+            lineColors: ['#a0d0e0'],
+            hideHover: 'auto'
+        });
+
+        // LINE CHART
+        var line = new Morris.Area({
+            element: 'line-chart',
+            resize: true,
+            data: [
+                {y: '01 January', Order: @totalOrder.January},
+                {y: '02 February', Order: @totalOrder.February},
+                {y: '03 March', Order: @totalOrder.March},
+                {y: '04 April', Order: @totalOrder.April},
+                {y: '05 May', Order: @totalOrder.May},
+                {y: '06 June', Order: @totalOrder.June},
+                {y: '07 July', Order: @totalOrder.July},
+                {y: '08 August', Order: @totalOrder.August},
+                {y: '09 September', Order: @totalOrder.September},
+                {y: '10 November', Order: @totalOrder.October},
+                {y: '11 September', Order: @totalOrder.November},
+                {y: '12 December', Order: @totalOrder.December}
+            ],
+            xkey: 'y',
+            ykeys: ['Order'],
+            labels: ['Order'],
+            lineColors: ['#a0d0e0'],
+            hideHover: 'auto'
+        });
+
+        //DONUT CHART
+        var donut = new Morris.Donut({
+            element: 'sales-chart',
+            resize: true,
+            colors: ["#3c8dbc", "#f56954", "#00a65a","#39CCCC","#ff851b"],
+            data: [
+                {label: "Dhaka", value: @dhaka},
+                {label: "Bogura", value: @bogura},
+                {label: "Chittagong", value: @ctg},
+                {label: "Barisal", value: @barisal},
+                {label: "Jessore", value: @jessore}
+          
+            ],
+            hideHover: 'auto'
+        });
+        //BAR CHART
+        var bar = new Morris.Bar({
+            element: 'bar-chart',
+            resize: true,
+            data: [
+                {y: 'January', a: @production.January, b: @dispatch.January},
+                {y: 'February', a: @production.February, b: @dispatch.February},
+                {y: 'March', a: @production.March, b: @dispatch.March},
+                {y: 'April', a: @production.April, b: @dispatch.April},
+                {y: 'May', a: @production.May, b: @dispatch.May},
+                {y: 'June', a: @production.June, b: @dispatch.June},
+                { y: 'July', a: @production.July, b: @dispatch.July },
+                {y: 'August', a: @production.August, b: @dispatch.August},
+                { y: 'September', a: @production.September, b: @dispatch.September },
+                { y: 'October', a: @production.October, b: @dispatch.October },
+                { y: 'November', a: @production.November, b: @dispatch.November },
+                { y: 'December', a: @production.December, b: @dispatch.December }
+            ],
+            barColors: ['#00a65a', '#f56954'],
+            xkey: 'y',
+            ykeys: ['a', 'b'],
+            labels: ['Production', 'Dispatch'],
+            hideHover: 'auto'
+        });
+    });
+
+</script>
 }
