--- a/NBL/Areas/Corporate/Views/Shared/_MenuPartialPage.cshtml
+++ b/NBL/Areas/Corporate/Views/Shared/_MenuPartialPage.cshtml
@@ -59,6 +59,6 @@
         <li>@Html.ActionLink(" Departments", "ViewDepartment", "Home", new { area = "Corporate" }, new { @class = "fa fa-list", style = "font-weight: bolder" })</li>
         <li>@Html.ActionLink(" Product Wish Vat", "ProductWishVat", "Home", new { area = "Corporate" }, new { @class = "fa fa-list", style = "font-weight: bolder" })</li>
         <li>@Html.ActionLink(" Discounts", "ViewDiscount", "Home", new { area = "Corporate" }, new { @class = "fa fa-list", style = "font-weight: bolder" })</li>
-        @*<li>@Html.ActionLink(" Business Area", "BusinessArea", "Home", new { area = "Corporate" }, new { @class = "fa fa-list", style = "font-weight: bolder" })</li>*@
+        <li>@Html.ActionLink(" Charts", "SalesChart", "Home", new { area = "Corporate" }, new { @class = "fa fa-list", style = "font-weight: bolder" })</li>
     </ul>
 </li>
