Code Modification for Product Life Cycle

--- a/NBL/Areas/CommonArea/Views/Order/RetailSale.cshtml
+++ b/NBL/Areas/CommonArea/Views/Order/RetailSale.cshtml
@@ -146,7 +146,7 @@
 
             $("#saveSoldBarcodesForm").submit();
             loadAllScannedBarCodeList();
-            alert("Saved Successfully!!");
+            //alert("Saved Successfully!!");
 
         } else {
             return false;// if it's a link to prevent post
