Code Modificaiton for Partial receive

--- a/NBL/Areas/Sales/Views/Shared/_ViewProductSummaryPartialPage.cshtml
+++ b/NBL/Areas/Sales/Views/Shared/_ViewProductSummaryPartialPage.cshtml
@@ -1,6 +1,6 @@
 ﻿  @model IEnumerable<NBL.Models.ViewModels.ViewProduct>
 <div class="table-responsive">
-    <table id="table_product_list_in_stock" class="display table table-striped table-bordered" style="border:1px solid black">
+    <table id="table_product_list_in_stock" class="display table-bordered" style="border:1px solid black">
 
         <thead>
         <tr>
