--- a/NBL/Areas/SCM/Views/Shared/_PendingOrdersPartialPage.cshtml
+++ b/NBL/Areas/SCM/Views/Shared/_PendingOrdersPartialPage.cshtml
@@ -1,7 +1,7 @@
 ﻿@model IEnumerable<NBL.Models.ViewModels.Orders.ViewOrder>
 <h3 class="text-center text-green headingStyle">Pending Orders</h3>
 <div class="table-responsive">
-<table id="table_pending_order_list" class="table table-bordered" style="border:1px solid black">
+<table id="table_pending_order_list" class="display  table-bordered" style="border:1px solid black">
     <thead>
     <tr>
         <th>Client Info</th>
