--- a/NBL/Views/Shared/_ViewClientPartialPage.cshtml
+++ b/NBL/Views/Shared/_ViewClientPartialPage.cshtml
@@ -33,7 +33,7 @@
                     @Html.Raw(item.GetBasicInformation())
                 </td>
                 <td>@Html.Raw(item.GetContactInformation())</td>
-                <td class="text-center">@item.Orders.Count</td>
+                <td class="text-center">@item.TotalOrder</td>
                 <td class="text-center">@(item.AssignedEmpName)</td>
                 <td class="text-center">
                     @Html.ActionLink(" Profile", "ViewClientProfile", null, new { id = item.ClientId }, new { @class = "fa fa-eye" })
