Product add done

--- a/NBL/Areas/AccountsAndFinance/Views/Product/AddProductDetails.cshtml
+++ b/NBL/Areas/AccountsAndFinance/Views/Product/AddProductDetails.cshtml
@@ -57,7 +57,7 @@
                     </div>
 
                     <div class="form-group">
-                        <label for="UpdatedDate" class="control-label col-md-2">Joining Date</label>
+                        <label for="UpdatedDate" class="control-label col-md-2">Updated Date</label>
                         <div class="col-md-10">
                             <input type="text" id="UpdatedDate" name="UpdatedDate" value="@date" class="form-control"/>
                         </div>
