--- a/NBL/Areas/AccountsAndFinance/Views/AccountManager/Discounts.cshtml
+++ b/NBL/Areas/AccountsAndFinance/Views/AccountManager/Discounts.cshtml
@@ -30,14 +30,14 @@
                     <td style="width: 10%">
                         <div class="row">
                             <div class="col-md-6 text-center">
-                                @using (Html.BeginForm("ApproveCashAmount", "Account", FormMethod.Post, new { id = item.DiscountId }))
+                                @using (Html.BeginForm("ApproveCashAmount", "AccountManager", FormMethod.Post, new { id = item.DiscountId }))
                                 {
                                     <input type="hidden" value="@item.DiscountId" id="VatIdToCancel" name="VatIdToCancel" />
                                     <input type="button" value="Cancel" class="btn btn-danger btn-sm" />
                                 }
                             </div>
                             <div class="col-md-6 text-center">
-                                @using (Html.BeginForm("ApproveDiscount", "Account", FormMethod.Post, new { id = item.DiscountId }))
+                                @using (Html.BeginForm("ApproveDiscount", "AccountManager", FormMethod.Post, new { id = item.DiscountId }))
                                 {
                                     <input type="hidden" value="@item.DiscountId" id="DiscountIdToApprove" name="DiscountIdToApprove" />
                                     <input type="button" value="Approve" class="btn btn-info btn-sm" id="@item.DiscountId" onclick="Approve(this)" />
@@ -81,7 +81,7 @@
                 var $form = $(id).parents('form');
                 $.ajax({
                     type: "POST",
-                    url: '@Url.Action("ApproveDiscount","Account", new { area = "AccountExecutive" })',
+                    url: '@Url.Action("ApproveDiscount","AccountManager", new { area = "AccountsAndFinance" })',
                     data: $form.serialize(),
                     error: function (xhr, status, error) {
                         //do something about the error
