Code Modification for Requisition vs Stock qty

--- a/NBL/Views/Shared/_ViewStockProductInBranchPartialPage.cshtml
+++ b/NBL/Views/Shared/_ViewStockProductInBranchPartialPage.cshtml
@@ -6,7 +6,7 @@
 
 <section class="content">
     @Html.ActionLink(" Back To List", "Home","Home",null,new {@class="btn btn-info btn-sm"})
-    <h2 class="text-center text-green">Stock In <strong>@Model.Branch.BranchName</strong> : @Model.Products.Sum(n => n.Quantity)</h2>
+    <h2 class="text-center text-green">Stock In <strong>@Model.Branch.BranchName</strong> : @Model.Products.Sum(n => n.StockQuantity)</h2>
 
 <table id="table_product_list_in_stock" class="display table table-striped table-bordered" style="border:1px solid black">
 
@@ -15,7 +15,10 @@
         <th class="text-center">Product Name</th>
         <th class="text-center">Category </th>
         <th class="text-center">Account Code  </th>
+       
         <th class="text-center" style="width: 60px">Stock Qty</th>
+        <th class="text-center" style="width: 100px">Requisition Qty</th>
+        <th class="text-center" style="width: 100px">Available Qty</th>
     </tr>
     </thead>
 
@@ -23,11 +26,27 @@
 
     @foreach (var item in Model.Products)
     {
+        var avail = item.StockQuantity - item.RequisitionQty;
         <tr>
             <td>@item.ProductName</td>
             <td class="text-center">@item.ProductCategoryName</td>
             <td class="text-center">@item.SubSubSubAccountCode</td>
-            <td class="text-center">@item.Quantity</td>
+           
+            <td class="text-center">@item.StockQuantity</td>
+            <td class="text-center">@item.RequisitionQty</td>
+            <td class="text-center">@if (avail > 0)
+                                    {
+                                        <b style="color: green">@avail</b>
+            }
+            else if (avail < 0)
+            {
+                <b style="color: red">@avail</b>
+            }
+            else
+            {
+                <b>@avail</b>
+            }
+            </td>
         </tr>
     }
 
@@ -38,7 +57,10 @@
 
         <th class="text-center">Category </th>
         <th class="text-center">Account Code  </th>
+      
         <th class="text-center">Stock Qty</th>
+       <th class="text-center">Requisition Qty</th>
+       <th class="text-center">Available Qty</th>
     </tr>
     </tfoot>
 </table>
